--- a/pages/experience.html
+++ b/pages/experience.html
@@ -68,9 +68,11 @@
         <figure id='typeWriter' class="mx-auto">
             <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
                     style="color:darkmagenta;">replace</span>(</h2>
-            <h2 id="typeWriter2"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span style="color: #00857c;">Pharmaceutical
+            <h2 id="typeWriter2"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
+                    style="color: #00857c;">Pharmaceutical
                     Engineer</span>',</h2>
-            <h2 id="typeWriter3"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span style="color:lime;">Software
+            <h2 id="typeWriter3"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
+                    style="color:lime;">Software
                     Developer</span>');</h2>
         </figure>
     </section>
@@ -93,19 +95,18 @@
         <div>
             <span class="h3">Description</span>
         </div>
-        <p>LeNova, Inc. is a engineering and technology solutions provider with a focus on the Life Sciences and
-            Commercial
-            industries. LeNova, Inc. has over 30 years of experience, and has specializations in the biopharmaceutical
-            space. I joined
-            LeNova in 2022 to support business expansion initiatives, develop their website, and build upon to their
-            core competencies.</p>
+        <p>LeNova, Inc. has over 30 years of experience as a engineering and technology solutions provider. They focus
+            on the Life Sciences and Commercial industries, but have a specialization in the Biopharmaceutical space. I
+            joined LeNova in 2022 to support business expansion initiatives, lead website development efforts, and build
+            upon to their core competencies.</p>
         <p>My roles and responsibilities include:</p>
         <ul>
+            <li>Responsive website development using HTML, CSS, JavaScript, and Bootstrap.</li>
             <li>Research business goals, customers and their expected behavior.</li>
             <li>Propose and update website designs and layouts with key stakeholders.</li>
-            <li>Develop the website using HTML, CSS, and JavaScript.</li>
+            <li>Processing and editing of digital image and video content. </li>
             <li>Ensure website is fully mobile and browser compatible.</li>
-            <li>Testing of all features, website maintenance and updates.</li>
+            <li>Testing of all features, site hosting, maintenance, and updates.</li>
             <li>Continuous Integration / Continuous Deployment (CI/CD).</li>
             <li>Search Engine Optimization (SEO) and Google Lighthouse.</li>
         </ul>
