exp wordsmithing proj myArt margin rem add p-t 2.5

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -95,7 +95,7 @@
         <div>
             <span class="h3">Description</span>
         </div>
-        <p>LeNova, Inc. has over 30 years of experience as a engineering and technology solutions provider. They focus
+        <p>LeNova, Inc. has over 30 years of experience as an engineering and technology solutions provider. They focus
             on the Life Sciences and Commercial industries, but have a specialization in the Biopharmaceutical space. I
             joined LeNova in 2022 to support business expansion initiatives, lead website development efforts, and build
             upon to their core competencies.</p>
