--- a/pages/experience.html
+++ b/pages/experience.html
@@ -101,7 +101,7 @@
             upon to their core competencies.</p>
         <p>My roles and responsibilities include:</p>
         <ul>
-            <li>Responsive website development using HTML, CSS, JavaScript, and Bootstrap.</li>
+            <li>Responsive website development using HTML, CSS, and JavaScript.</li>
             <li>Research business goals, customers and their expected behavior.</li>
             <li>Propose and update website designs and layouts with key stakeholders.</li>
             <li>Processing and editing of digital image and video content. </li>
