--- a/pages/about_new.html
+++ b/pages/about_new.html
@@ -72,28 +72,32 @@
     <div id='techStack' class="myArticles container-fluid">
         <h1>My Tech Stack</h1>
         <div class="row">
-            <img src="../pics/about/html5_logo.gif" class='col-sm-4 img-fluid' alt="HTML5 Logo.">
-            <img src="../pics/about/css3_logo.gif" class='col-sm-4 img-fluid' alt="CSS3 Logo.">
-            <img src="../pics/about/javascript_logo.gif" class='col-sm-4 img-fluid' alt="JavaScript Logo.">
-            <img src="../pics/about/bootstrap-logo.svg" class='py-3 col-sm-4 img-fluid' alt="Bootstrap Logo.">
+            <img src="../pics/about/html5_logo.gif" class='col-sm-4 img-fluid img-round' alt="HTML5 Logo.">
+            <img src="../pics/about/css3_logo.gif" class='col-sm-4 img-fluid img-round' alt="CSS3 Logo.">
+            <img src="../pics/about/javascript_logo.gif" class='col-sm-4 img-fluid img-round' alt="JavaScript Logo.">
+            <img src="../pics/about/bootstrap-logo.svg" class='py-3 col-sm-4 img-fluid img-round' alt="Bootstrap Logo.">
         </div>
     </div>
 
     <div id="education" class="myArticles container-fluid">
         <h1>Education</h1>
-        <div class="row">
-            <img src="../pics/about/udel_monogram.gif" class='col-sm-4 img-fluid py-2' alt="University of Delaware Monogram.">
-            <img src="../pics/about/mitxPro_logoStacked.jpg" class='img-squared col-sm-4 img-fluid py-2' alt="MIT xPro Logo Stacked.">
-            <img src="../pics/about/udel_shield1743.gif" class='col-sm-4 img-fluid py-2' alt="University of Delware Shield Logo.">
+        <div class="row m-auto">
+            <img src="../pics/about/mitxPro_logoStacked.jpg" class='img-square col-sm-4 img-fluid py-2 mx-auto' alt="MIT xPro Logo Stacked.">
+            <div class="col-sm-4 text-center my-auto">
+                <img src="../pics/about/fcc_primary_large.png" alt="freeCodeCamp.org Logo" class="m-3 img-fluid img-rect">
+                <img src="../pics/about/theOdinProject.png" alt="The Odin Project Logo" class="m-3 img-fluid img-rect">
+            </div>
+            <img src="../pics/about/udel_shield1743.gif" class='col-sm-4 img-fluid py-2 img-round text-center mx-auto' alt="University of Delware Shield Logo.">
         </div>
     </div>
 
     <div id="hobbies" class="myArticles container-fluid">
         <h1>Hobbies</h1>
         <div class="row">
-            <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-squared col-sm-4 img-fluid py-3' alt="Picture of Pete snowboarding.">
-            <img src="../pics/about/issa_logo.gif" class='col-sm-4 img-fluid py-3' alt="International Sports Sciences Association Logo">
-            <img src="../pics/about/peteSnowboardingProfile.jpg" class='img-squared col-sm-4 img-fluid py-3' alt="Pete snowboarding">
+            <img src="../pics/about/peteSnowboardingProfile.jpg" class='img-square col-sm-4 img-fluid py-3' alt="Pete snowboarding">
+            <img src="../pics/about/issa_logo.gif" class='col-sm-4 img-fluid img-round py-3' alt="International Sports Sciences Association Logo">
+            <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
+            <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3' alt="Picture of Pete snowboarding.">
         </div>
     </div>
 
