--- a/pages/about_new.html
+++ b/pages/about_new.html
@@ -95,6 +95,7 @@
         <h1>Hobbies</h1>
         <div class="row">
             <img src="../pics/about/peteSnowboardingProfile.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Pete snowboarding">
+            <img src="../pics/about/peteSwitch.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete gym selfie.">
             <img src="../pics/about/issa_logo.gif" class='col-sm-4 img-fluid img-round py-3 my-auto' alt="International Sports Sciences Association Logo">
             <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
             <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
