profile pics to about

--- a/pages/about.html
+++ b/pages/about.html
@@ -94,9 +94,10 @@
     <div id="hobbies" class="myArticles container-fluid">
         <h1>Hobbies</h1>
         <div class="row">
-            <img src="../pics/about/peteSwitch.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete gym selfie.">
+            <img src="../pics/profilepic.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete's profile picture.">
             <img src="../pics/about/issa_logo.gif" class='col-sm-4 img-fluid img-round py-3 my-auto' alt="International Sports Sciences Association Logo">
             <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
+            <img src="../pics/about/peteSwitch.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete selfie with a shiba inu named Switch.">
         </div>
         <div class="row">
             <img src="../pics/about/peteSTi.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="2005 Subaru WRX STi on the track.">
