prof pic about new test

--- a/pages/about_new.html
+++ b/pages/about_new.html
@@ -69,6 +69,10 @@
         <h1 style="color: black; text-shadow:1px 1px silver;">This page is currently under construction...</h1>
     </figure>
 
+    <div id="greetingPic">
+        <img src="../pics/profilepic.jpg" class='img-fluid' alt="Pete's profile picture.">
+    </div>
+
     <div id='techStack' class="myArticles container-fluid">
         <h1>Tech Stack</h1>
         <div class="row">
@@ -96,11 +100,11 @@
             <div class="my-auto row text-center">
                 <h4>Self Taught Certificates</h4>
                 <div class="col-sm-5">
-                    <a href="https://www.freecodecamp.org" target="_blank"><img src="../pics/about/fcc_primary_large.png" alt="freeCodeCamp.org Logo" class="img-fluid img-rect my-3"></a>
+                    <a href="https://www.freecodecamp.org" target="_blank"><img src="../pics/about/fcc_primary_large.png" alt="freeCodeCamp.org Logo" class="img-fluid img-rect m-3"></a>
                     <br>
-                    <a href="https://www.theodinproject.com" target="_blank"><img src="../pics/about/theOdinProject.png" alt="The Odin Project Logo" class="img-fluid img-rect m-2"></a>
+                    <a href="https://www.theodinproject.com" target="_blank"><img src="../pics/about/theOdinProject.png" alt="The Odin Project Logo" class="img-fluid img-rect mb-4"></a>
                 </div>
-                <div class="col-sm-7 text-start">
+                <div class="col-sm-7 text-start my-auto">
                     <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/javascript-algorithms-and-data-structures">JavaScript Algorithms & Data Structures</a></h6>
                     <p>Jan 2022</p>
                     <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/responsive-web-design">Responsive Web Design</a></h6>
