about new personal

--- a/pages/about_new.html
+++ b/pages/about_new.html
@@ -117,14 +117,22 @@
     <div id="personal" class="myArticles container-fluid">
         <h1>Personal Stuff</h1>
         <div class="row">
-            <img src="../pics/profilepic.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete's profile picture.">
-            <img src="../pics/about/issa_logo.gif" class='col-sm-4 img-fluid img-round py-3 my-auto' alt="International Sports Sciences Association Logo">
-            <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
+            <img src="../pics/about/issa_logo.gif" class='col-sm-4 img-fluid img-round py-2 my-auto' alt="International Sports Sciences Association Logo">
             <img src="../pics/about/peteSwitch.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete selfie with a shiba inu named Switch.">
+            <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
+        </div>
+        <div class='row'>
+            <p class="col-sm-4">Fitness and nutrition is my other passion. I'm also a certified personal trainer through ISSA.</p>
+            <p class="col-sm-7">Dogs > cats, but I like all animals, as long as they don't try to eat me. For fun, I pick up heavy things and put them back down. Some call it 'resistance training.'</p>
         </div>
         <div class="row">
-            <img src="../pics/about/peteSTi.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="2005 Subaru WRX STi on the track.">
             <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
+            <img src="../pics/about/peteSTi.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="2005 Subaru WRX STi on the track.">
+            <img src="../pics/about/peteTheForce.png" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Annie is a sith lord!">
+        </div>
+        <div class="row">
+            <p class="col-sm-7">I have also slid down mountains strapped to a waxy plank, and driven around in circles as fast as I can.</p>
+            <p class="col-sm-4">I may have also married a Sith Lord!  'It is the way.'</p>
         </div>
     </div>
 
