about new check

--- a/pages/about_new.html
+++ b/pages/about_new.html
@@ -123,7 +123,8 @@
         </div>
         <div class='row'>
             <p class="col-sm-4">Fitness and nutrition is my other passion. I'm also a certified personal trainer through ISSA.</p>
-            <p class="col-sm-7">Dogs > cats, but I like all animals, as long as they don't try to eat me. For fun, I pick up heavy things and put them back down. Some call it 'resistance training.'</p>
+            <p class="col-sm-7">Dogs > cats, but I like all animals, as long as they don't try to eat me.
+            <br>For fun, I pick up heavy things and put them back down. Some call it 'resistance training.'</p>
         </div>
         <div class="row">
             <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
@@ -132,7 +133,7 @@
         </div>
         <div class="row">
             <p class="col-sm-7">I have also slid down mountains strapped to a waxy plank, and driven around in circles as fast as I can.</p>
-            <p class="col-sm-4">I may have also married a Sith Lord!  'It is the way.'</p>
+            <p class="col-sm-4">I may have also married a Sith Lord!<br>'It is the way.'</p>
         </div>
     </div>
 
