--- a/pages/about.html
+++ b/pages/about.html
@@ -69,8 +69,12 @@
         <h1 style="color: black; text-shadow:1px 1px silver;">This page is currently under construction...</h1>
     </figure>
 
+    <div id="greetingPic">
+        <img src="../pics/profilepic.jpg" class='img-fluid' alt="Pete's profile picture.">
+    </div>
+
     <div id='techStack' class="myArticles container-fluid">
-        <h1>My Tech Stack</h1>
+        <h1>Tech Stack</h1>
         <div class="row">
             <img src="../pics/about/html5_logo.gif" class='col-sm-4 img-fluid img-round' alt="HTML5 Logo.">
             <img src="../pics/about/css3_logo.gif" class='col-sm-4 img-fluid img-round' alt="CSS3 Logo.">
@@ -82,26 +86,54 @@
     <div id="education" class="myArticles container-fluid">
         <h1>Education</h1>
         <div class="row m-auto">
-            <img src="../pics/about/mitxPro_logoStacked.jpg" class='img-square col-sm-4 img-fluid py-2 mx-auto' alt="MIT xPro Logo Stacked.">
-            <div class="col-sm-4 text-center my-auto">
-                <img src="../pics/about/fcc_primary_large.png" alt="freeCodeCamp.org Logo" class="m-3 img-fluid img-rect">
-                <img src="../pics/about/theOdinProject.png" alt="The Odin Project Logo" class="m-3 img-fluid img-rect">
+            <div class="col-sm-4 text-center">
+                <img src="../pics/about/mitxPro_logoStacked.jpg" class='img-square col-sm-3 img-fluid p-2' alt="MIT xPro Logo Stacked.">
+                <h6>Professional Certificate</h6>
+                <h6><a href="https://executive-ed.xpro.mit.edu/professional-certificate-coding" target="_blank">Full Stack MERN Web Development</a></h6>
+                <p>Jul 2022</p>
             </div>
-            <img src="../pics/about/udel_shield1743.gif" class='col-sm-4 img-fluid py-2 img-round text-center mx-auto' alt="University of Delware Shield Logo.">
+            <div class="col-sm-4 text-center">
+                <a href="https://www.udel.edu/" target="_blank"><img src="../pics/about/udel_shield1743.gif" class=' img-fluid py-1 img-round text-center mx-auto mb-3' alt="University of Delware Shield Logo."></a>
+                <h6>Bachelor's Degree</h6>
+                <p>Biological Sciences<br>Dec 2001</p>
+            </div>
+            <div class="my-auto row text-center">
+                <h4>Self Taught Certificates</h4>
+                <div class="col-sm-5">
+                    <a href="https://www.freecodecamp.org" target="_blank"><img src="../pics/about/fcc_primary_large.png" alt="freeCodeCamp.org Logo" class="img-fluid img-rect m-3"></a>
+                    <br>
+                    <a href="https://www.theodinproject.com" target="_blank"><img src="../pics/about/theOdinProject.png" alt="The Odin Project Logo" class="img-fluid img-rect mb-4"></a>
+                </div>
+                <div class="col-sm-7 text-start my-auto">
+                    <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/javascript-algorithms-and-data-structures">JavaScript Algorithms & Data Structures</a></h6>
+                    <p>Jan 2022</p>
+                    <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/responsive-web-design">Responsive Web Design</a></h6>
+                    <p>Dec 2021</p>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div id="hobbies" class="myArticles container-fluid">
-        <h1>Hobbies</h1>
+    <div id="personal" class="myArticles container-fluid">
+        <h1>Personal Stuff</h1>
         <div class="row">
-            <img src="../pics/profilepic.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete's profile picture.">
-            <img src="../pics/about/issa_logo.gif" class='col-sm-4 img-fluid img-round py-3 my-auto' alt="International Sports Sciences Association Logo">
-            <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
+            <img src="../pics/about/issa_logo.gif" class='col-sm-4 img-fluid img-round py-2 my-auto' alt="International Sports Sciences Association Logo">
             <img src="../pics/about/peteSwitch.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete selfie with a shiba inu named Switch.">
+            <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
+        </div>
+        <div class='row'>
+            <p class="col-sm-4">Fitness and nutrition is my other passion. I'm also a certified personal trainer through ISSA.</p>
+            <p class="col-sm-7">Dogs > cats, but I like all animals, as long as they don't try to eat me.
+            <br>For fun, I pick up heavy things and put them back down. Some call it 'resistance training.'</p>
         </div>
         <div class="row">
-            <img src="../pics/about/peteSTi.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="2005 Subaru WRX STi on the track.">
             <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
+            <img src="../pics/about/peteSTi.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="2005 Subaru WRX STi on the track.">
+            <img src="../pics/about/peteTheForce.png" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Annie is a sith lord!">
+        </div>
+        <div class="row">
+            <p class="col-sm-7">I have also slid down mountains strapped to a waxy plank, and driven around in circles as fast as I can.</p>
+            <p class="col-sm-4">I may have also married a Sith Lord!<br>'It is the way.'</p>
         </div>
     </div>
 
