--- a/pages/about_new.html
+++ b/pages/about_new.html
@@ -69,6 +69,19 @@
         <h1 style="color: black; text-shadow:1px 1px silver;">This page is currently under construction...</h1>
     </figure>
 
+    <!-- <section id="typeWriterSection">
+        <figure id='typeWriter' class="mx-auto">
+            <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
+                    style="color:darkmagenta;">replace</span>(</h2>
+            <h2 id="typeWriter2"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
+                    style="color: #00857c;">Pharmaceutical
+                    Engineer</span>',</h2>
+            <h2 id="typeWriter3"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
+                    style="color:lime;">Software
+                    Developer</span>');</h2>
+        </figure>
+    </section> -->
+
     <div id="greetingPic">
         <img src="../pics/profilepic.jpg" class='img-fluid' alt="Pete's profile picture.">
     </div>
