--- a/pages/about.html
+++ b/pages/about.html
@@ -132,7 +132,7 @@
             <img src="../pics/about/peteTheForce.png" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Annie is a sith lord!">
         </div>
         <div class="row">
-            <p class="col-sm-7">I have also slid down mountains strapped to a waxy plank, and driven around in circles as fast as I can.</p>
+            <p class="col-sm-7">I have slid down mountains strapped to a waxy plank, and driven around in circles as fast as I can.</p>
             <p class="col-sm-4">I may have also married a Sith Lord!<br>'It is the way.'</p>
         </div>
     </div>
