--- a/pages/about_new.html
+++ b/pages/about_new.html
@@ -71,14 +71,11 @@
 
     <!-- <section id="typeWriterSection">
         <figure id='typeWriter' class="mx-auto">
-            <h2 id="typeWriter1"><span style="color: silver">stationInLife</span>.<span
-                    style="color:darkmagenta;">replace</span>(</h2>
-            <h2 id="typeWriter2"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
-                    style="color: #00857c;">Pharmaceutical
-                    Engineer</span>',</h2>
-            <h2 id="typeWriter3"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
-                    style="color:lime;">Software
-                    Developer</span>');</h2>
+            while(alive) {
+                code();
+                track(macros);
+                lift(weights);
+            }
         </figure>
     </section> -->
 
@@ -145,7 +142,7 @@
             <img src="../pics/about/peteTheForce.png" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Annie is a sith lord!">
         </div>
         <div class="row">
-            <p class="col-sm-7">I have also slid down mountains strapped to a waxy plank, and driven around in circles as fast as I can.</p>
+            <p class="col-sm-7">I have slid down mountains strapped to a waxy plank, and driven around in circles as fast as I can.</p>
             <p class="col-sm-4">I may have also married a Sith Lord!<br>'It is the way.'</p>
         </div>
     </div>
