resume and about

--- a/pages/about.html
+++ b/pages/about.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="../pages/blog.html">My Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/experience.html">Experience</a>
+                        <a class="nav-link" href="../pages/resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/projects.html">Projects</a>
@@ -73,58 +73,16 @@
         <img src="../pics/profilepic.jpg" class='img-fluid' alt="Pete's profile picture.">
     </div>
 
-    <div id='techStack' class="myArticles container-fluid">
-        <h1>Tech Stack</h1>
-        <div class="row">
-            <img src="../pics/about/html5_logo.gif" class='col-sm-4 img-fluid img-round' alt="HTML5 Logo.">
-            <img src="../pics/about/css3_logo.gif" class='col-sm-4 img-fluid img-round' alt="CSS3 Logo.">
-            <img src="../pics/about/javascript_logo.gif" class='col-sm-4 img-fluid img-round' alt="JavaScript Logo.">
-            <img src="../pics/about/bootstrap-logo.svg" class='py-3 col-sm-4 img-fluid img-round' alt="Bootstrap Logo.">
-        </div>
-    </div>
-
-    <div id="education" class="myArticles container-fluid">
-        <h1>Education</h1>
-        <div class="row m-auto">
-            <div class="col-sm-4 text-center">
-                <img src="../pics/about/mitxPro_logoStacked.jpg" class='img-square col-sm-3 img-fluid p-2' alt="MIT xPro Logo Stacked.">
-                <h6>Professional Certificate</h6>
-                <h6><a href="https://executive-ed.xpro.mit.edu/professional-certificate-coding" target="_blank">Full Stack MERN Web Development</a></h6>
-                <p>Jul 2022</p>
-            </div>
-            <div class="col-sm-4 text-center">
-                <a href="https://www.udel.edu/" target="_blank"><img src="../pics/about/udel_shield1743.gif" class=' img-fluid py-1 img-round text-center mx-auto mb-3' alt="University of Delware Shield Logo."></a>
-                <h6>Bachelor's Degree</h6>
-                <p>Biological Sciences<br>Dec 2001</p>
-            </div>
-            <div class="my-auto row text-center">
-                <h4>Self Taught Certificates</h4>
-                <div class="col-sm-5">
-                    <a href="https://www.freecodecamp.org" target="_blank"><img src="../pics/about/fcc_primary_large.png" alt="freeCodeCamp.org Logo" class="img-fluid img-rect m-3"></a>
-                    <br>
-                    <a href="https://www.theodinproject.com" target="_blank"><img src="../pics/about/theOdinProject.png" alt="The Odin Project Logo" class="img-fluid img-rect mb-4"></a>
-                </div>
-                <div class="col-sm-7 text-start my-auto">
-                    <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/javascript-algorithms-and-data-structures">JavaScript Algorithms & Data Structures</a></h6>
-                    <p>Jan 2022</p>
-                    <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/responsive-web-design">Responsive Web Design</a></h6>
-                    <p>Dec 2021</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div id="personal" class="myArticles container-fluid">
-        <h1>Personal Stuff</h1>
+        <h1 class="text-center mb-4">Personal Stuff</h1>
         <div class="row">
             <img src="../pics/about/issa_logo.gif" class='col-sm-4 img-fluid img-round py-2 my-auto' alt="International Sports Sciences Association Logo">
             <img src="../pics/about/peteSwitch.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete selfie with a shiba inu named Switch.">
             <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
         </div>
         <div class='row'>
-            <p class="col-sm-4">Fitness and nutrition is my other passion. I'm also a certified personal trainer through ISSA.</p>
-            <p class="col-sm-7">Dogs > cats, but I like all animals, as long as they don't try to eat me.
-            <br>For fun, I pick up heavy things and put them back down. Some call it 'resistance training.'</p>
+            <p class="col-sm-4"><span>Fitness and nutrition</span> are my other life passions. I am also a certified personal trainer.</p>
+            <p class="col-sm-7"><span>Dogs > cats</span>, but I like all animals, as long as they don't try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it '<span>resistance training.'</span></p>
         </div>
         <div class="row">
             <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
@@ -132,8 +90,8 @@
             <img src="../pics/about/peteTheForce.png" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Annie is a sith lord!">
         </div>
         <div class="row">
-            <p class="col-sm-7">I have slid down mountains strapped to a waxy plank, and driven around in circles as fast as I can.</p>
-            <p class="col-sm-4">I may have also married a Sith Lord!<br>'It is the way.'</p>
+            <p class="col-sm-7">I have slid down <span>mountains</span> strapped to a waxy plank, and <span>driven</span> in circles as fast as I can.</p>
+            <p class="col-sm-4">I may have also married a Sith Lord!<br><span>'It is the way.'</span></p>
         </div>
     </div>
 
