--- a/pages/construction.html
+++ b/pages/construction.html
@@ -2,65 +2,66 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
+    <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
-  <!-- Bootstrap Link -->
-  <link rel="stylesheet" href="../libraries/bootstrap.min.css">
+    <!-- Bootstrap Link -->
+    <link rel="stylesheet" href="../libraries/bootstrap.min.css">
 
-  <!-- Font CSS Links -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
+    <!-- Font CSS Links -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 
-  <!-- My CSS -->
-  <link rel="stylesheet" href="../css/global.css">
-  <link rel="stylesheet" href="../css/construction.css">
-  <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
+    <!-- My CSS -->
+    <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/construction.css">
+    <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-  <title>codeByPete</title>
+    <title>codeByPete</title>
 </head>
 
 <body>
 
-  <div id='welcome' class='container-fluid animationBorder'>
+    <div id='welcome' class='container-fluid animationBorder'>
+        <figure class=''>
+            <h1 class='animationDropDown'><span class='animationTurnOpaque'>Thanks for visiting</span></h1>
+            <h1 class='animationSlideFromLeft'><span>code</span><span>By</span><span
+                    class='animationExpand'>Pe</span><span class='animationTurnGreen'>te</span></h1>
+            <!-- <hr> -->
+        </figure>
+    </div>
+
     <figure class=''>
-      <h1 class='animationDropDown'><span class='animationTurnOpaque'>Thanks for visiting</span></h1>
-      <h1 class='animationSlideFromLeft'><span>code</span><span>By</span><span class='animationExpand'>Pe</span><span
-          class='animationTurnGreen'>te</span></h1>
-      <!-- <hr> -->
+        <h4 class='animationFlipIn'>This page is currently under construction...</h4>
     </figure>
-  </div>
 
-  <figure class=''>
-    <h4 class='animationFlipIn'>This page is currently under construction...</h4>
-  </figure>
+    <footer class="container-fluid">
+        <p>Copyright ©
+            <script>
+                document.write(new Date().getFullYear())
+            </script>
+            <img class='d-none d-sm-inline' src="../pics/pharma2code_icon.gif" style='height: 2rem;'
+                alt="My 'Pharma 2 Code' Logo.">
+            <span style="color:white;">code</span><span style="color:#00857c;">By</span><span
+                style="color:lime;">Pete</span>
+        </p>
+        <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo"
+                src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
+        <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo"
+                src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
+        <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo"
+                src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
+    </footer>
 
-  <footer class="container-fluid">
-    <p>Copyright ©
-      <script>
-        document.write(new Date().getFullYear())
-      </script>
-      <img class='d-none d-sm-inline' src="../pics/pharma2code_icon.gif" style='height: 2rem;'
-        alt="My 'Pharma 2 Code' Logo.">
-      <span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span>
-    </p>
-    <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo"
-        src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
-    <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo"
-        src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
-    <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo"
-        src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
-  </footer>
-
-  <!-- JS Libraries -->
-  <script src="../libraries/bootstrap.min.js"></script>
-  <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
+    <!-- JS Libraries -->
+    <script src="../libraries/bootstrap.min.js"></script>
+    <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
 </body>
 
 </html>
