--- a/pages/blog.html
+++ b/pages/blog.html
@@ -51,7 +51,7 @@
                         <a class="nav-link active" href="../pages/blog.html">My Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/experience.html">Experience</a>
+                        <a class="nav-link" href="../pages/resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/projects.html">Projects</a>
