--- a/pages/resume.html
+++ b/pages/resume.html
@@ -21,13 +21,14 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/experience.css">
+    <link rel="stylesheet" href="../css/resume.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
     <title>codeByPete</title>
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
@@ -50,7 +51,7 @@
                         <a class="nav-link" href="../pages/blog.html">My Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../pages/experience.html">Experience</a>
+                        <a class="nav-link active" href="../pages/resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/projects.html">Projects</a>
@@ -77,7 +78,58 @@
         </figure>
     </section>
 
+    <div id="education" class="myArticles container-fluid">
+        <h1 class="text-center">Education</h1>
+        <div class="row m-auto">
+            <div class="col-sm-4 text-center my-2">
+                <a href="https://xpro.mit.edu/" target="_blank"><img src="../pics/about/mitxPro_logoStacked.jpg" class='img-square col-sm-3 img-fluid p-2' alt="MIT xPro Logo Stacked."></a>
+                <h5 class="menloRegular">Professional Certificate</h5>
+                <h6><a href="https://executive-ed.xpro.mit.edu/professional-certificate-coding" target="_blank">Full Stack MERN Web Development</a></h6>
+                <div class="dateSection">
+                    <p>Jul 2022 <span style="color:gray"><br>(in progress)</span></p>
+                </div>
+            </div>
+            <div class="col-sm-4 text-center my-2">
+                <a href="https://www.udel.edu/" target="_blank"><img src="../pics/about/udel_shield1743.gif" class=' img-fluid py-1 img-round text-center mx-auto mb-3' alt="University of Delware Shield Logo."></a>
+                <h5 class="menloRegular">Bachelor's Degree</h5>
+                <h6><a href="https://www.bio.udel.edu/" target="_blank">Biological Sciences</a></h6>
+                <div class="dateSection">
+                    <p id="hiddenText">Dec 2001</p>
+                </div>
+            </div>
+            <div class="my-auto row text-center">
+                <h5 class="mt-4 menloRegular">Self Taught Certificates</h5>
+                <div class="col-sm-5">
+                    <a href="https://www.freecodecamp.org" target="_blank"><img src="../pics/about/fcc_primary_large.png" alt="freeCodeCamp.org Logo" class="img-fluid img-rect m-3"></a>
+                    <br>
+                    <a href="https://www.theodinproject.com" target="_blank"><img src="../pics/about/theOdinProject.png" alt="The Odin Project Logo" class="img-fluid img-rect mb-4"></a>
+                </div>
+                <div class="col-sm-7 text-center my-auto">
+                    <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/javascript-algorithms-and-data-structures">JavaScript Algorithms & Data Structures</a></h6>
+                    <div class="dateSection text-center mb-2">
+                        <p>Jan 2022</p>
+                    </div>
+                    <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/responsive-web-design">Responsive Web Design</a></h6>
+                    <div class="dateSection text-center">
+                        <p>Dec 2021</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id='techStack' class="myArticles container-fluid">
+        <h1 class="text-center mb-4">Tech Stack</h1>
+        <div class="row">
+            <img src="../pics/about/html5_logo.gif" class='col-sm-4 img-fluid img-round' alt="HTML5 Logo.">
+            <img src="../pics/about/css3_logo.gif" class='col-sm-4 img-fluid img-round' alt="CSS3 Logo.">
+            <img src="../pics/about/javascript_logo.gif" class='col-sm-4 img-fluid img-round' alt="JavaScript Logo.">
+            <img src="../pics/about/bootstrap-logo.svg" class='py-3 col-sm-4 img-fluid img-round' alt="Bootstrap Logo.">
+        </div>
+    </div>
+
     <div class="container-fluid myArticles">
+        <h1 class="text-center mb-4">Experience</h1>
         <div class="row">
             <div class="col-sm-8">
                 <h3>Company <img class='float-end' src="../pics/lenovainc_logo.gif" alt="LeNova Logo"></h3>
