--- a/pages/about.html
+++ b/pages/about.html
@@ -82,7 +82,7 @@
         </div>
         <div class='row'>
             <p class="col-sm-4"><span>Fitness and nutrition</span> are my other life passions. I am also a certified personal trainer.</p>
-            <p class="col-sm-7"><span>Dogs > cats</span>, but I like all animals, as long as they don't try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it '<span>resistance training.'</span></p>
+            <p class="col-sm-7"><span>Dogs > cats</span>, but I like all animals, as long as they don't try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training.'</span></p>
         </div>
         <div class="row">
             <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
