--- a/pages/about.html
+++ b/pages/about.html
@@ -81,8 +81,8 @@
             <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
         </div>
         <div class='row'>
-            <p class="col-sm-4"><span>Fitness and nutrition</span> are my other life passions. I am also a certified personal trainer.</p>
-            <p class="col-sm-7"><span>Dogs > cats</span>, but I like all animals, as long as they don't try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training.'</span></p>
+            <p class="col-sm-4"><span>Fitness & nutrition</span> are my other life passions. I am also a certified personal trainer.</p>
+            <p class="col-sm-7"><span>Dogs > cats</span>, but I like all animals, as long as they are not trying to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training.'</span></p>
         </div>
         <div class="row">
             <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
