about cleanup res nav link hov fix

--- a/pages/about.html
+++ b/pages/about.html
@@ -76,7 +76,9 @@
     <div id="personal" class="myArticles container-fluid">
         <h1 class="text-center mb-4">Personal Stuff</h1>
         <div class="row">
-            <img src="../pics/about/issa_logo.gif" class='col-sm-4 img-fluid img-round py-2 my-auto' alt="International Sports Sciences Association Logo">
+            <div class="col-sm-4 text-center">
+                <a href="https://www.issaonline.com/" target="_blank"><img src="../pics/about/issa_logo.gif" class='img-fluid img-round my-auto' alt="International Sports Sciences Association Logo"></a>
+            </div>
             <img src="../pics/about/peteSwitch.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete selfie with a shiba inu named Switch.">
             <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
         </div>
@@ -91,7 +93,7 @@
         </div>
         <div class="row">
             <p class="col-sm-7">I have slid down <span>mountains</span> strapped to a waxy plank, and <span>driven</span> in circles as fast as I can.</p>
-            <p class="col-sm-4">I may have also married a Sith Lord!<br><span>'It is the way.'</span></p>
+            <p class="col-sm-4">I may have also married a <a href="https://en.wikipedia.org/wiki/Sith" target="_blank">Sith</a> Lord!<br><span>'It is the way.'</span></p>
         </div>
     </div>
 
