--- a/pages/resume.html
+++ b/pages/resume.html
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="my-auto row text-center">
-                <h5 class="mt-4 menloRegular">Self Taught Certificates</h5>
+                <h5 class="mt-4 menloRegular">Self-Taught Certificates</h5>
                 <div class="col-sm-5">
                     <a href="https://www.freecodecamp.org" target="_blank"><img src="../pics/about/fcc_primary_large.png" alt="freeCodeCamp.org Logo" class="img-fluid img-rect m-3"></a>
                     <br>
