--- a/pages/about.html
+++ b/pages/about.html
@@ -73,6 +73,18 @@
         <img src="../pics/profilepic.jpg" class='img-fluid' alt="Pete's profile picture.">
     </div>
 
+    <div id="myIntro" class="myArticles container-fluid">
+        <h4>Hello,</h4>
+        <p>My name is <span>Pete</span> and I am a <span>child of the 90s.</span>  I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.</p>
+        <p>'Medicine is my destiny,' or so I was told.  After obtaining a university degree in Biology, I found a <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> in the Pharmaceutical space, where I worked professionally for over two decades.</p>
+        <p>At the mid-point of my career, I have decided to to learn how to code and pursue my childhood dream of being a Software Developer.</p>
+        <p>Please join me on <a href="../pages/blog.html" target="_blank" class="menloRegular">myCodingJourney</a>.</p>
+        <div class="row">
+            <img id='crushItApple' class='col-sm-1 img-rect img-fluid' src="../pics/about/crushItApple.jpg" alt="Core Nutritionals sticker on a glowing Apple logo.">
+            <p class="col-sm-11 text-end">Best Regards,<br>Pete Chu</p>
+        </div>
+    </div>
+
     <div id="personal" class="myArticles container-fluid">
         <h1 class="text-center mb-4">Personal Stuff</h1>
         <div class="row">
