--- a/pages/about.html
+++ b/pages/about.html
@@ -74,10 +74,10 @@
     </div>
 
     <div id="myIntro" class="myArticles container-fluid">
-        <h4>Hello,</h4>
+        <h2>Hello,</h2>
         <p>My name is <span>Pete</span> and I am a <span>child of the 90s.</span>  I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.</p>
-        <p>'Medicine is my destiny,' or so I was told.  After obtaining a university degree in Biology, I found a <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> in the Pharmaceutical space, where I worked professionally for over two decades.</p>
-        <p>At the mid-point of my career, I have decided to to learn how to code and pursue my childhood dream of being a Software Developer.</p>
+        <p><span style="color:silver">'Medicine is my destiny</span>,<span style="color:silver">'</span> or so I was told.  After obtaining a <span style="color:silver">University Degree</span> in <span style="color:silver">Biological Sciences</span>, I found a <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> as a professional in the <span style="color:silver">Pharmaceutical</span> space for over two decades.</p>
+        <p>At the mid-point of my career, I have decided to pursue my <span>childhood dream</span> of being a <span>Software Developer</span>.</p>
         <p>Please join me on <a href="../pages/blog.html" target="_blank" class="menloRegular">myCodingJourney</a>.</p>
         <div class="row">
             <img id='crushItApple' class='col-sm-1 img-rect img-fluid' src="../pics/about/crushItApple.jpg" alt="Core Nutritionals sticker on a glowing Apple logo.">
